<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#2bb4f9"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/textView1"
      android:layout_alignTop="@+id/textView4"
      android:text="TextView" />

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/button1"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="33dp"
       android:text="Sign up" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/button2"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="40dp"
       android:onClick="login"
       android:text="@string/Login" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/button1"
       android:layout_alignLeft="@+id/textView3"
       android:layout_marginBottom="20dp"
       android:text="@string/attempts"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:text="@string/login_screen"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/textView5"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="32dp"
       android:ems="10"
       android:inputType="textPassword" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText2"
       android:layout_alignLeft="@+id/editText2"
       android:text="@string/password"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/editText1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/textView3"
       android:layout_alignRight="@+id/editText2"
       android:layout_marginBottom="16dp"
       android:ems="10" >

       <requestFocus />
   </EditText>

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText1"
       android:layout_alignLeft="@+id/textView3"
       android:text="@string/username"
       android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>